[package]
name = "pgrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "uuid", "macros", "tls-rustls"] }
sqlx-postgres = {version = "0.7", features = ["uuid"]}
colored = "2.1.0"
url = "2.5.0"
regex = "1.10.3"
serde_json = "1.0.113"
anyhow = "1.0.79"
sqlx-core = "0.7.3"
